volumes for insidecode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,13 @@ services:
       # Use the public network created to be shared between Traefik and
       # any other service that needs to be publicly available with HTTPS
       - traefik-public
+    volumes:
+      - insidecode:/var/www/app/docs
 
 networks:
   traefik-public:
+    external: true
+
+volumes:
+  insidecode:
     external: true
