--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -37,9 +37,10 @@ services:
       - traefik.constraint-label=traefik-public
       # admin-auth middleware with HTTP Basic auth
       # Using the environment variables USERNAME and HASHED_PASSWORD
-      # - traefik.http.middlewares.admin-auth.basicauth.users=admin:${HASHED_PASSWORD}
+      - traefik.http.middlewares.admin-auth.basicauth.users=admin:${HASHED_PASSWORD}
       # traefik-http set up only to use the middleware to redirect to https
       # traefik-https the actual router using HTTPS
+      - traefik.http.routers.traefik-dashboard-https.middlewares=admin-auth
     volumes:
       # Add Docker as a mounted volume, so that Traefik can read the labels of other services
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -67,7 +68,7 @@ services:
       - --log.format=json
       - --log.level=DEBUG  
       # Enable the Dashboard and API
-      # - --api
+      - --api
     networks:
       # Use the public network created to be shared between Traefik and
       # any other service that needs to be publicly available with HTTPS
