adding tactification service to docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,22 @@ services:
       # Define the port inside of the Docker service to use
       - traefik.http.services.app.loadbalancer.server.port=80
       # Make Traefik use this domain in HTTP
-      - traefik.http.routers.app-http.entrypoints=http
-      - traefik.http.routers.app-http.rule=Host(`insidecode.me`)
+      - traefik.http.routers.insidecode-http.entrypoints=http
+      - traefik.http.routers.insidecode-http.rule=Host(`insidecode.me`)
       # Use the traefik-public network (declared below)
       - traefik.docker.network=traefik-public
       # Make Traefik use this domain in HTTPS
-      - traefik.http.routers.app-https.entrypoints=https
-      - traefik.http.routers.app-https.rule=Host(`insidecode.me`)
-      - traefik.http.routers.app-https.tls=true
+      - traefik.http.routers.insidecode-https.entrypoints=https
+      - traefik.http.routers.insidecode-https.rule=Host(`insidecode.me`)
+      - traefik.http.routers.insidecode-https.tls=true
       # Use the "le" (Let's Encrypt) resolver
-      - traefik.http.routers.app-https.tls.certresolver=le
+      - traefik.http.routers.insidecode-https.tls.certresolver=le
       # https-redirect middleware to redirect HTTP to HTTPS
       - traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
       - traefik.http.middlewares.https-redirect.redirectscheme.permanent=true
       # Middleware to redirect HTTP to HTTPS
-      - traefik.http.routers.app-http.middlewares=https-redirect
-      - traefik.http.routers.app-https.middlewares=admin-auth
+      - traefik.http.routers.insidecode-http.middlewares=https-redirect
+      - traefik.http.routers.insidecode-https.middlewares=admin-auth
     networks:
       # Use the public network created to be shared between Traefik and
       # any other service that needs to be publicly available with HTTPS
@@ -32,6 +32,37 @@ services:
     volumes:
       - insidecode:/var/www/app/docs
 
+  tactification:
+    build: ./
+    restart: always
+    labels:
+      # Enable Traefik for this specific "backend" service
+      - traefik.enable=true
+      # Define the port inside of the Docker service to use
+      - traefik.http.services.app.loadbalancer.server.port=80
+      # Make Traefik use this domain in HTTP
+      - traefik.http.routers.tactification-http.entrypoints=http
+      - traefik.http.routers.tactification-http.rule=Host(`tactification.com`)
+      # Use the traefik-public network (declared below)
+      - traefik.docker.network=traefik-public
+      # Make Traefik use this domain in HTTPS
+      - traefik.http.routers.tactification-https.entrypoints=https
+      - traefik.http.routers.tactification-https.rule=Host(`tactification.com`)
+      - traefik.http.routers.tactification-https.tls=true
+      # Use the "le" (Let's Encrypt) resolver
+      - traefik.http.routers.tactification-https.tls.certresolver=le
+      # https-redirect middleware to redirect HTTP to HTTPS
+      - traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
+      - traefik.http.middlewares.https-redirect.redirectscheme.permanent=true
+      # Middleware to redirect HTTP to HTTPS
+      - traefik.http.routers.tactification-http.middlewares=https-redirect
+      - traefik.http.routers.tactification-https.middlewares=admin-auth
+    networks:
+      # Use the public network created to be shared between Traefik and
+      # any other service that needs to be publicly available with HTTPS
+      - traefik-public
+    volumes:
+      - insidecode:/var/www/app/docs
 networks:
   traefik-public:
     external: true
