--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -40,7 +40,7 @@ services:
       - traefik.http.middlewares.admin-auth.basicauth.users=admin:${HASHED_PASSWORD}
       # traefik-http set up only to use the middleware to redirect to https
       # traefik-https the actual router using HTTPS
-      - traefik.http.routers.traefik-dashboard-https.middlewares=admin-auth
+      # - traefik.http.routers.traefik-dashboard-https.middlewares=admin-auth
     volumes:
       # Add Docker as a mounted volume, so that Traefik can read the labels of other services
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -67,8 +67,8 @@ services:
       - --log.filepath=/var/log/traefik.log
       - --log.format=json
       - --log.level=DEBUG  
-      # Enable the Dashboard and API
-      - --api
+      # Enable the Dashboard and API(To enable traefik dashboard, enable this)
+      #- --api
     networks:
       # Use the public network created to be shared between Traefik and
       # any other service that needs to be publicly available with HTTPS
